Refactor: 공고 상세페이지 근무기간, 업무환경, jobCount 추가